# market-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/knowledge_base/: README.md  technical_analysis_basics.md
scripts/: init_knowledge_base.py
src/: cli.py  config.py  llm.py  main.py
src/agents/: __init__.py  chip_agent.py  fundamental_agent.py  graph.py  history_agent.py  market_agent.py  news_agent.py  orchestrator.py  rag_agent.py  research_agent.py  social_agent.py  state.py  synthesizer.py  technical_agent.py
src/bot/: discord_bot.py  scheduler.py
src/memory/: __init__.py  conversation_repo.py  database.py  models.py  news_cache.py  session_store.py  stock_store.py
src/rag/: __init__.py  embedder.py  knowledge_store.py
src/tools/: __init__.py  chip_data.py  cmoney_concept.py  cmoney_forum.py  company_insight.py  news_fetcher.py  sector_data.py  social_signal.py  stock_data.py  theme_search.py
